--- a/directXgame.vcxproj.filters
+++ b/directXgame.vcxproj.filters
@@ -82,9 +82,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\shaders\Object3d.hlsli" />
+    <None Include="resources\shaders\particle.hlsli" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="resources\shaders\Object3d.PS.hlsl" />
     <FxCompile Include="resources\shaders\Object3d.VS.hlsl" />
+    <FxCompile Include="resources\shaders\particle.PS.hlsl" />
+    <FxCompile Include="resources\shaders\particle.VS.hlsl" />
   </ItemGroup>
 </Project>
